<resources>
    <string name="hello">Hello World, WelcomeActivity!</string>
    <string name="app_name">VANCL</string>
    <string name="upomp_lthj_company">中国银联股份有限公司版权所有</string>
    <string name="upomp_lthj_version_hint">版本号</string>
    <string name="upomp_lthj_version">1.1.0</string>
    <string name="upomp_lthj_about_copyright">©2002-2012</string>
    <string name="upomp_lthj_exit_pay">退出支付</string>
    <string name="upomp_lthj_home">首页</string>
    <string name="upomp_lthj_next">下一步</string>
    <string name="upomp_lthj_back">返回</string>
    <string name="upomp_lthj_login">登 录</string>
    <string name="upomp_lthj_cancel">取 消</string>
    <string name="upomp_lthj_keyboard_title">密码键盘</string>
    <string name="upomp_lthj_letter">字母</string>
    <string name="upomp_lthj_num">数字</string>
    <string name="upomp_lthj_sign">符号</string>
    <string name="upomp_lthj_str_no">收起</string>
    <string name="upomp_lthj_str_ok">确定</string>
    <string name="upomp_lthj_nextpage">下一页</string>
    <string name="upomp_lthj_backpage">上一页</string>
    <string name="upomp_lthj_merchant_data_empty_prompt">商户传入的数据为空</string>
    <string name="upomp_lthj_merchantId_Empty_prompt">商户号不能为空</string>
    <string name="upomp_lthj_merchantId_Length_prompt">商户号的长度在15-24位之间</string>
    <string name="upomp_lthj_merchantName_Empty_prompt">商户名称不能为空</string>
    <string name="upomp_lthj_merchantOrderId_Empty_prompt">订单号不能为空</string>
    <string name="upomp_lthj_merchantOrderAmt_Empty_prompt">应付金额不能为空</string>
    <string name="upomp_lthj_merchantOrderAmt_Digits_prompt">应付金额格式不正确</string>
    <string name="upomp_lthj_merchantOrderTime_Empty_prompt">交易时间不能为空</string>
    <string name="upomp_lthj_merchantOrderTime_error_prompt">交易时间格式不正确</string>
    <string name="upomp_lthj_merchantXml_Format_prompt">商户传入的报文格式错误</string>
    <string name="upomp_lthj_merchantXml_ReadError_prompt">配置文件解析失败</string>
    <string name="upomp_lthj_merchantXml_HashFormat_prompt">配置文件值格式错误</string>
    <string name="upomp_lthj_merchantXml_MD5Error_prompt">配置文件校验失败</string>
    <string name="upomp_lthj_have_no_initfile">初始化关键文件示找到</string>
    <string name="upomp_lthj_watting">联网中，请稍候......</string>
    <string name="upomp_lthj_cvn">cvn2</string>
    <string name="upomp_lthj_password">密码</string>
    <string name="upomp_lthj_secureinfo">安全信息</string>
    <string name="upomp_lthj_sendMessageSuccess">验证短信发送成功， 请注意查收</string>
    <string name="upomp_lthj_sendMessageLose">验证短信发送失败，</string>
    <string name="upomp_lthj_safe_prompt">获取验证码后，请核对安全信息</string>
    <string name="upomp_lthj_use_quick">使用银联号账号支付</string>
    <string name="upomp_lthj_use_card">直接输入卡号支付</string>
    <string name="upomp_lthj_three_cardtype">信用卡/储蓄卡/储值卡</string>
    <string name="upomp_lthj_card_mobile_num">银行预留手机号</string>
    <string name="upomp_lthj_username_hint">用户名</string>
    <string name="upomp_lthj_password_hint">6-12位密码</string>
    <string name="upomp_lthj_input_char_hint">6-12位字符组合</string>
    <string name="upomp_lthj_pin_hint">银行卡密码</string>
    <string name="upomp_lthj_confirm_pay">确认支付</string>
    <string name="upomp_lthj_mobile_mac_hint">短信验证码</string>
    <string name="upomp_lthj_get_mac">获取验证码</string>
    <string name="upomp_lthj_please_get_mac">请先获取验证码</string>
    <string name="upomp_lthj_getting_mac">获取中…</string>
    <string name="upomp_lthj_after_getmobilemacAgain">S后获取</string>
    <string name="upomp_lthj_cvn2_hint">CVN2 卡背面末三位数</string>
    <string name="upomp_lthj_date_hint">有效期 格式为MM/YY</string>
    <string name="upomp_lthj_repay">重新支付</string>
    <string name="upomp_lthj_backtomerchant">返回商户</string>
    <string name="upomp_lthj_quick_reg_prompt">畅享快捷支付，建议您进行快速注册,并关联银行卡!</string>
    <string name="upomp_lthj_reg_safe_prompt">请牢记或修改以下安全信息!</string>
    <string name="upomp_lthj_quick_reg_fail_prompt">很遗憾注册失败！如有疑问，请致电95516</string>
    <string name="upomp_lthj_quick_bind_prompt">恭喜您注册成功！仅需一步，绑定银行卡，立刻成为快捷支付用户！</string>
    <string name="upomp_lthj_pay_success">恭喜您支付成功！</string>
    <string name="upomp_lthj_pay_fail">很遗憾支付失败！</string>
    <string name="upomp_lthj_bind_result_prompt">您可以在下次使用时，通过该用户名享受快捷支付！</string>
    <string name="upomp_lthj_reg_now">立即注册</string>
    <string name="upomp_lthj_done">完 成</string>
    <string name="upomp_lthj_safe_ask_default">首次支付的银行卡是</string>
    <string name="upomp_lthj_username">"用  户  名"</string>
    <string name="upomp_lthj_loginpwd">登录密码</string>
    <string name="upomp_lthj_account_manage">账户管理</string>
    <string name="upomp_lthj_welcome_word">"欢  迎  语"</string>
    <string name="upomp_lthj_save_account">登录成功，建议您保存用户名，让登录更加便捷!</string>
    <string name="upomp_lthj_no_save">不保存</string>
    <string name="upomp_lthj_card_info">卡信息</string>
    <string name="upomp_lthj_forget_password">忘记密码</string>
    <string name="upomp_lthj_mobile">"手  机  号"</string>
    <string name="upomp_lthj_safe_ask">安全问题</string>
    <string name="upomp_lthj_safe_asw">问题答案</string>
    <string name="upomp_lthj_new_pwd">"新  密  码"</string>
    <string name="upomp_lthj_old_pwd">"原  密  码"</string>
    <string name="upomp_lthj_confirm_pwd">确认密码</string>
    <string name="upomp_lthj_bind_num">绑卡数量</string>
    <string name="upomp_lthj_myinfo">我的信息</string>
    <string name="upomp_lthj_backcard_manage">银行卡管理</string>
    <string name="upomp_lthj_change_pwd">修改密码</string>
    <string name="upomp_lthj_change_pwd_success">恭喜您，密码修改成功!</string>
    <string name="upomp_lthj_reset_pwd_success">密码重置成功!</string>
    <string name="upomp_lthj_change_mobile">修改手机号</string>
    <string name="upomp_lthj_change_mobile_success">恭喜您，手机号修改成功</string>
    <string name="upomp_lthj_back_pay">返回支付</string>
    <string name="upomp_lthj_bind_now">立即绑卡</string>
    <string name="upomp_lthj_no_bind">您尚未绑定银行卡</string>
    <string name="upomp_lthj_ente_username">请输入用户名</string>
    <string name="upomp_lthj_ente_cardmobile">请输入绑定的手机号</string>
    <string name="upomp_lthj_ente_new_pwd">请输入新密码</string>
    <string name="upomp_lthj_ente_answer">请输入问题答案</string>
    <string name="upomp_lthj_ente_confirm_pwd">请输入确认密码</string>
    <string name="upomp_lthj_ok">确 定</string>
    <string name="upomp_lthj_app_quitNotice_msg">退出支付</string>
    <string name="upomp_lthj_close">关闭</string>
    <string name="upomp_lthj_choose_pay_card">请选择支付的银行卡</string>
    <string name="upomp_lthj_old_mobile">原手机号</string>
    <string name="upomp_lthj_ente_new_mobile">请输入新手机号</string>
    <string name="upomp_lthj_choose_safeask">请选择安全问题</string>
    <string name="upomp_lthj_custom_safeask">自定义安全问题</string>
    <string name="upomp_lthj_multiple_user_login_tip">您的帐户在另一地点登录，您已被迫下线如果不是您本人操作，您的密码很可能已经泄漏，建议您重新登录并立即修改密码</string>
    <string name="upomp_lthj_no_support_card">暂不支持该银行卡，请更换其他卡进行支付</string>
    <string name="upomp_lthj_check_support">查看范围</string>
    <string name="upomp_lthj_logout_prompt">您确定要退出登录吗?</string>
    <string name="upomp_lthj_unbind_prompt">你确定要将这张卡解除关联吗？</string>
    <string name="upomp_lthj_set_default_prompt">你确定要将这张卡设为默认卡吗？</string>
    <string name="upomp_lthj_add_card">添加银行卡</string>
    <string name="upomp_lthj_two_card_type">信用卡/储蓄卡</string>
    <string name="upomp_lthj_use_thecard">使用此卡支付</string>
    <string name="upomp_lthj_set_default">设为默认卡</string>
    <string name="upomp_lthj_unbind">解除绑定</string>
    <string name="upomp_lthj_debitcard">借记卡</string>
    <string name="upomp_lthj_creditcard">信用卡</string>
    <string name="upomp_lthj_bind_success">恭喜您绑卡成功！</string>
    <string name="upomp_lthj_bind_fail">很遗憾绑卡失败！</string>
    <string name="upomp_lthj_rebind">重新绑定</string>
    <string name="upomp_lthj_session_timeout_tip">您长时间未与服务器进行通信，为保证通信安全，相关服务已被关闭。如需继续，请退出后重新操作</string>
    <string name="upomp_lthj_validateOldMobileNum_Empty_prompt">原手机号码不能为空，请您输入11位原手机号码</string>
    <string name="upomp_lthj_validateNewMobileNum_Empty_prompt">新手机号码不能为空，请您输入11位新手机号码</string>
    <string name="upomp_lthj_validateChars_Format_prompt">请输入6-16位字符组合</string>
    <string name="upomp_lthj_validateChars_Format_prompt2">请输入6-20位字符组合</string>
    <string name="upomp_lthj_validatePassword_complex_prompt">不能为纯数字或纯字母</string>
    <string name="upomp_lthj_validateNewPassword_Same_prompt">新密码和确认新密码不一致</string>
    <string name="upomp_lthj_validateNum_Length_prompt">请输入11位数字</string>
    <string name="upomp_lthj_mobileMacError_Length_prompt">请输入6位短信验证码</string>
    <string name="upomp_lthj_emailError_Format_prompt">邮箱地址格式不正确</string>
    <string name="upomp_lthj_welcome_wordError_Length_prompt">请输入2-16位字符组合</string>
    <string name="upomp_lthj_validatePassword_complex_prompt_kind">为保证安全，请不要使用纯数字或纯字母作为密码（区分大小写字母）</string>
    <string name="upomp_lthj_validateMobileMac_Empty_prompt">短信验证码不能为空，请您重新输入</string>
    <string name="upomp_lthj_validateMobileMac_Length_prompt">请输入正确的短信验证码</string>
    <string name="upomp_lthj_validateMobileMac_Same_prompt">短信验证码错误，请确认您填写的是否与您收到的短信验证码一致</string>
    <string name="upomp_lthj_validateMobileNum_LengthEmpty_prompt">手机号码不能为空，而且长度必须为11位</string>
    <string name="upomp_lthj_validateMobileNum_FromatError_prompt">手机号码格式不正确</string>
    <string name="upomp_lthj_validateUserName_Empty_prompt">用户名不能为空，请您重新输入</string>
    <string name="upomp_lthj_validateUser_Protocal_prompt">您需要勾选并同意用户协议才能完成注册</string>
    <string name="upomp_lthj_validateUserName_Length_prompt">用户名格式不正确，用户名应由6-20位字符组合组成</string>
    <string name="upomp_lthj_validatePassWord_Empty_prompt">密码不能为空，请您重新输入</string>
    <string name="upomp_lthj_validatePassWord_Length_prompt">密码格式不正确，必须为包含字母和数字的6-12位字符</string>
    <string name="upomp_lthj_validateBankPassWord_Length_prompt">密码格式不正确，密码应为6位字符组成</string>
    <string name="upomp_lthj_validateOldPassWord_Empty_prompt">原密码不能为空，请您重新输入</string>
    <string name="upomp_lthj_validateOldPassWord_Length_prompt">原密码格式不正确，必须为包含字母和数字的6-12位字符</string>
    <string name="upomp_lthj_validateNewPassWord_Empty_prompt">新密码不能为空，请您重新输入</string>
    <string name="upomp_lthj_validateNewPassWord_Length_prompt">新密码格式不正确，必须为包含字母和数字的6-12位字符</string>
    <string name="upomp_lthj_validatePassWord_Same_prompt">两次输入密码不一致，请重新输入</string>
    <string name="upomp_lthj_validateImageCode_Empty_prompt">校验码不能为空，请您重新输入</string>
    <string name="upomp_lthj_validateImageCode_Error_prompt">校验码格式不正确</string>
    <string name="upomp_lthj_validateEmail_Empty_prompt">邮箱地址未填写，请您重新输入</string>
    <string name="upomp_lthj_validateEmail_Format_prompt">邮箱地址格式不正确，请您重新输入</string>
    <string name="upomp_lthj_validateWelcomeWord_Empty_prompt">欢迎语不能为空，请您重新输入</string>
    <string name="upomp_lthj_validateSafeQuestion_Empty_prompt">安全问题不能为空，请您重新输入</string>
    <string name="upomp_lthj_validateSafeAnswer_Empty_prompt">安全答案不能为空，请您重新输入</string>
    <string name="upomp_lthj_validateUserConcert_Empty_prompt">请您同意用户协议</string>
    <string name="upomp_lthj_validateExpiryMonth_Empty_prompt">有效期填写有误，请您输入有效期</string>
    <string name="upomp_lthj_validateExpiryYear_Empty_prompt">有效期填写有误，请您输入有效期</string>
    <string name="upomp_lthj_validateCVN2_Empty_prompt">CVN2不能为空，请您重新输入</string>
    <string name="upomp_lthj_validateCVN2_Format_prompt">CVN2格式不正确，请您重新输入3位CVN2</string>
    <string name="upomp_lthj_validatePan_Empty_prompt">银行卡号码不能为空，请您重新输入</string>
    <string name="upomp_lthj_validatePan_Format_prompt">银行卡号码格式不正确，请您重新输入15到19位银行卡号</string>
    <string name="upomp_lthj_validatePanPassword_Empty_prompt">密码不能为空，请您重新输入</string>
    <string name="upomp_lthj_validatePanPassword_Length_prompt">密码格式不正确，请您输入六位密码</string>
    <string name="upomp_lthj_validateCardPan_Empty_prompt">储值卡号不能为空，请您重新输入</string>
    <string name="upomp_lthj_validateCardPanPassword_Empty_prompt">储值卡密码不能为空，请您重新输入</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
</resources>