<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/upomp_lthj_scrollview_big"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" style="@style/upomp_lthj_layout_padding"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <com.unionpay.upomp.lthj.widget.CustomInputView android:id="@id/upomp_lthj_old_pwd_input" android:text="@string/upomp_lthj_old_pwd" android:hint="@string/upomp_lthj_input_char_hint" style="@style/upomp_lthj_comstominput" />
        <com.unionpay.upomp.lthj.widget.CustomInputView android:id="@id/upomp_lthj_new_pwd_input" android:text="@string/upomp_lthj_new_pwd" android:hint="@string/upomp_lthj_input_char_hint" style="@style/upomp_lthj_comstominput" />
        <com.unionpay.upomp.lthj.widget.CustomInputView android:id="@id/upomp_lthj_confirm_pwd_input" android:text="@string/upomp_lthj_confirm_pwd" android:hint="@string/upomp_lthj_input_char_hint" style="@style/upomp_lthj_comstominput" />
        <ImageView android:background="@drawable/upomp_lthj_gray_line" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginBottom="@dimen/upomp_lthj_margin_top" />
        <LinearLayout android:orientation="vertical" style="@style/upomp_lthj_info_layout">
            <com.unionpay.upomp.lthj.widget.LineFrameView android:id="@id/upomp_lthj_mobile_number_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/upomp_lthj_mobile_icon" android:hint="@string/upomp_lthj_mobile" />
        </LinearLayout>
        <RelativeLayout style="@style/upomp_lthj_input_layout">
            <EditText android:id="@id/upomp_lthj_mobilemac_edit" android:hint="@string/upomp_lthj_mobile_mac_hint" android:maxLength="6" android:layout_centerVertical="true" android:inputType="phone" style="@style/upomp_lthj_input_edittext" />
            <Button android:id="@id/upomp_lthj_get_mac_btn" android:text="@string/upomp_lthj_get_mac" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/upomp_lthj_verifycode_btn" />
        </RelativeLayout>
        <Button android:id="@id/upomp_lthj_button_ok" android:text="@string/upomp_lthj_ok" style="@style/upomp_lthj_button_big_single" />
    </LinearLayout>
</ScrollView>