<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/upomp_lthj_scrollview_big"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" style="@style/upomp_lthj_layout_padding"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" style="@style/upomp_lthj_info_layout">
            <com.unionpay.upomp.lthj.widget.LineFrameView android:id="@id/upomp_lthj_username_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/upomp_lthj_user_icon" android:hint="@string/upomp_lthj_username" />
            <ImageView style="@style/upomp_lthj_rowline" />
            <com.unionpay.upomp.lthj.widget.LineFrameView android:id="@id/upomp_lthj_mobile_number_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/upomp_lthj_mobile_icon" android:hint="@string/upomp_lthj_mobile" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" style="@style/upomp_lthj_info_layout">
            <com.unionpay.upomp.lthj.widget.LineFrameView android:id="@id/upomp_lthj_safe_ask_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/upomp_lthj_shield_icon" android:hint="@string/upomp_lthj_safe_ask" />
        </LinearLayout>
        <RelativeLayout style="@style/upomp_lthj_input_layout">
            <EditText android:id="@id/upomp_lthj_safe_asw_view" android:hint="@string/upomp_lthj_ente_answer" android:layout_centerVertical="true" style="@style/upomp_lthj_input_edittext" />
        </RelativeLayout>
        <RelativeLayout style="@style/upomp_lthj_input_layout">
            <EditText android:id="@id/upomp_lthj_password_edit" android:hint="@string/upomp_lthj_ente_new_pwd" android:layout_centerVertical="true" style="@style/upomp_lthj_input_edittext" />
        </RelativeLayout>
        <RelativeLayout style="@style/upomp_lthj_input_layout">
            <EditText android:id="@id/upomp_lthj_confirm_pwd_input" android:hint="@string/upomp_lthj_ente_confirm_pwd" android:layout_centerVertical="true" style="@style/upomp_lthj_input_edittext" />
        </RelativeLayout>
        <com.unionpay.upomp.lthj.widget.ValidateCodeView android:id="@id/upomp_lthj_validatecode_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/upomp_lthj_margin_top" />
        <Button android:id="@id/upomp_lthj_button_ok" android:text="@string/upomp_lthj_ok" style="@style/upomp_lthj_button_big_single" />
    </LinearLayout>
</ScrollView>