<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/upomp_lthj_scrollview_big"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" style="@style/upomp_lthj_layout_padding"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout style="@style/upomp_lthj_input_layout">
            <EditText android:id="@id/upomp_lthj_username_edit" android:hint="@string/upomp_lthj_ente_username" android:layout_centerVertical="true" style="@style/upomp_lthj_input_edittext" />
        </RelativeLayout>
        <RelativeLayout style="@style/upomp_lthj_input_layout">
            <EditText android:id="@id/upomp_lthj_mobile_num_edit" android:hint="@string/upomp_lthj_ente_cardmobile" android:maxLength="11" android:layout_centerVertical="true" android:inputType="phone" style="@style/upomp_lthj_input_edittext" />
        </RelativeLayout>
        <RelativeLayout style="@style/upomp_lthj_input_layout">
            <EditText android:id="@id/upomp_lthj_mobilemac_edit" android:hint="@string/upomp_lthj_mobile_mac_hint" android:maxLength="6" android:layout_centerVertical="true" android:inputType="phone" style="@style/upomp_lthj_input_edittext" />
            <Button android:id="@id/upomp_lthj_get_mac_btn" android:text="@string/upomp_lthj_get_mac" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/upomp_lthj_verifycode_btn" />
        </RelativeLayout>
        <com.unionpay.upomp.lthj.widget.ValidateCodeView android:id="@id/upomp_lthj_validatecode_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/upomp_lthj_margin_top" />
        <Button android:id="@id/upomp_lthj_next_btn" android:text="@string/upomp_lthj_next" style="@style/upomp_lthj_button_big_single" />
    </LinearLayout>
</ScrollView>