<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/upomp_lthj_scrollview_big"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" style="@style/upomp_lthj_layout_padding"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" style="@style/upomp_lthj_info_layout">
            <com.unionpay.upomp.lthj.widget.LineFrameView android:id="@id/upomp_lthj_state_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/upomp_lthj_fail_icon" android:text="@string/upomp_lthj_quick_reg_fail_prompt" />
            <ImageView android:id="@id/upomp_lthj_desc_line" style="@style/upomp_lthj_rowline" />
            <com.unionpay.upomp.lthj.widget.LineFrameView android:id="@id/upomp_lthj_error_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/upomp_lthj_desc_icon" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" style="@style/upomp_lthj_info_layout">
            <com.unionpay.upomp.lthj.widget.LineFrameView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/upomp_lthj_prompt_icon" android:text="@string/upomp_lthj_bind_result_prompt" />
            <ImageView style="@style/upomp_lthj_rowline" />
            <com.unionpay.upomp.lthj.widget.LineFrameView android:id="@id/upomp_lthj_username_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/upomp_lthj_user_icon" android:hint="@string/upomp_lthj_username" />
        </LinearLayout>
        <Button android:id="@id/upomp_lthj_button_ok" android:text="@string/upomp_lthj_backtomerchant" style="@style/upomp_lthj_button_big_single" />
    </LinearLayout>
</ScrollView>